--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "WebGL fluid animation",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode=development "
+    "start": "webpack serve --mode=development",
+    "build": "webpack --mode=production"
   },
   "author": "piotrosoba",
   "license": "ISC",
